--- a/scape-gen/scape-gen-smarter.ipynb
+++ b/scape-gen/scape-gen-smarter.ipynb
@@ -179,7 +179,7 @@
     "    spec = (spec - spec_mean) / spec_std\n",
     "\n",
     "    # Lowpass filter\n",
-    "    lowpass = 5000 #hz\n",
+    "    lowpass = max_freq #hz\n",
     "    highest_index = np.abs(freq - lowpass).argmin()\n",
     "    spec = spec[0:highest_index, :]\n",
     "    freq = freq[0:highest_index]\n",
