--- a/scape-gen/scape-gen-smarter.ipynb
+++ b/scape-gen/scape-gen-smarter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_scapes_labels(sounds_toUse, source_dir, scape_count, base_name, background_label, scape_dur, foreground_dir, max_freq):\n",
+    "def gen_scapes_labels(sounds_toUse, source_dir, scape_count, base_name, background_label, scape_dur, foreground_dir):\n",
     "    for i in range(len(sounds_toUse)):\n",
     "        # read csv of each sound_toUse:\n",
     "        sounds_list[i] = pd.read_csv(f\"{source_dir}/audio/foreground_csvs/{sounds_toUse[i][0]}.csv\", header=None)\n",
@@ -40,11 +40,11 @@
     "    # print(f\"sounds_list[0] = {sounds_list[0]}\\n\")\n",
     "\n",
     "    for scape in range(scape_count):\n",
-    "\n",
     "        # set up scape info\n",
     "        scape_name = f\"{base_name}_scape{scape}\"\n",
     "        print(f\"scape{scape}:\")\n",
     "        label = \"\"\n",
+    "        row = f\"{source_dir}/{base_name}/JPEGImages/{scape_name}.jpg,\\\"[\"\n",
     "\n",
     "        # set up scaper\n",
     "        sc = scaper.Scaper(scape_dur, f\"{source_dir}/audio/foreground\", f\"{source_dir}/audio/background\")\n",
@@ -55,12 +55,18 @@
     "\n",
     "        sc.add_background(label = (\"const\", background_label),\n",
     "                        source_file = (\"choose\", []),\n",
-    "                        source_time = (\"uniform\", 0, 60-scape_dur)) # background source files are 60 seconds long\n",
+    "                        source_time = (\"uniform\", 0, 60-scape_dur)) # background source files are 60 seconds long # TODO\n",
     "\n",
     "        for i in range(len(sounds_toUse)): # for each type of call\n",
     "            df = sounds_list[i]\n",
     "            j = random.randint(sounds_toUse[i][1], sounds_toUse[i][2]) # choose how many calls of this type in the file\n",
-    "\n",
+    "            \n",
+    "            if j >0: # for all_files.csv - if there is an instance of this class, add it to the row\n",
+    "                if row.endswith(\"[\"):\n",
+    "                    row = f\"{row}\\'{sounds_toUse[i][3]}\\'\"\n",
+    "                else:\n",
+    "                    row = f\"{row}, \\'{sounds_toUse[i][3]}\\'\"\n",
+    "                \n",
     "            for k in range(j):\n",
     "                foreground_label = sounds_toUse[i][0]\n",
     "\n",
@@ -126,12 +132,13 @@
     "                       reverb=0,\n",
     "                       disable_sox_warnings=True,\n",
     "                       no_audio=False)\n",
-    "            \n"
+    "        row = f\"{row}]\\\"\"\n",
+    "        all_files[scape+1] = row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,12 +199,12 @@
     "    image = image.resize((width_px, height_px)) #10304, 256  notched specto = 5164 x 101, squished to be divisible by 32\n",
     "    image.save(f\"{out_dir}/JPEGImages/{p.stem}.jpg\")   \n",
     "\n",
-    "    return f\"{out_dir}/JPEGImages/{p.stem}.jpg\""
+    "    return f\"{out_dir}/JPEGImages/{p.stem}.jpg\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,19 +228,20 @@
     "height_px = 96\n",
     "\n",
     "# prep empty variables to fill\n",
-    "labels = [None]*scape_count\n",
+    "all_files = [None]*(scape_count+1)\n",
+    "all_files[0] = \"X,y\" # will output as all_files.csv\n",
     "count = 0 # current label number, as reference index for place in labels\n",
     "\n",
     "# UPDATE: fill sounds_toUse with desired scape properties\n",
-    "# sounds_toUse = list of tuples containing which sound categories to include in this dataset, and how many to include - specified as min, max per scape\n",
+    "# sounds_toUse = list of tuples containing which sound categories to include in this dataset, and how many to include\n",
     "#    TODO: add probability option?\n",
-    "sounds_toUse = [(\"rats-fewer-singlebarks\", 1, 2), (\"EATO\", 0, 1), (\"WOTH\", 0, 2)]\n",
-    "sounds_list = [None]*len(sounds_toUse)"
+    "sounds_toUse = [(\"rats-fewer-singlebarks\", 1, 2, \"bamboo-rat\"), (\"EATO\", 0, 1, \"EATO\"), (\"WOTH\", 0, 2, \"WOTH\")] # foldername in foreground, min/scape, max/scape, class\n",
+    "sounds_list = [None]*len(sounds_toUse)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +255,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.35) is greater that source duration (0.35), changing to 0.35\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.42) is greater that source duration (0.42), changing to 0.42\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
       "  ScaperWarning)\n"
      ]
     },
@@ -262,7 +274,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.66) is greater that source duration (0.66), changing to 0.66\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.42) is greater that source duration (0.42), changing to 0.42\n",
       "  ScaperWarning)\n",
       "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
       "  ScaperWarning)\n"
@@ -279,9 +293,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.55) is greater that source duration (0.55), changing to 0.55\n",
-      "  ScaperWarning)\n",
-      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.66) is greater that source duration (0.66), changing to 0.66\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.42) is greater that source duration (0.42), changing to 0.42\n",
       "  ScaperWarning)\n"
      ]
     },
@@ -289,6 +301,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "scape3:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.55) is greater that source duration (0.55), changing to 0.55\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scape4:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.66) is greater that source duration (0.66), changing to 0.66\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "gen_scapes_labels(sounds_toUse, source_dir, scape_count, base_name, background_label, scape_dur, foreground_dir)\n",
+    "np.savetxt(\"all_files.csv\", all_files, fmt='%s')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scape0:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.35) is greater that source duration (0.35), changing to 0.35\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scape1:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.55) is greater that source duration (0.55), changing to 0.55\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.42) is greater that source duration (0.42), changing to 0.42\n",
+      "  ScaperWarning)\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
+      "  ScaperWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scape2:\n",
       "scape3:\n"
      ]
     },
@@ -311,35 +407,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: rats-fewer-singlebarks event duration (0.66) is greater that source duration (0.66), changing to 0.66\n",
+      "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
       "  ScaperWarning)\n",
       "/Users/kitzeslab/anaconda3/lib/python3.7/site-packages/scaper/core.py:1170: ScaperWarning: WOTH event duration (0.77) is greater that source duration (0.77), changing to 0.77\n",
       "  ScaperWarning)\n"
      ]
-    }
-   ],
-   "source": [
-    "gen_scapes_labels(sounds_toUse, source_dir, scape_count, base_name, background_label, scape_dur, foreground_dir, max_freq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "filename = scapes/rats_EATO_WOTH_scape2.wav\n",
-      "\n",
       "filename = scapes/rats_EATO_WOTH_scape3.wav\n",
       "\n",
       "filename = scapes/rats_EATO_WOTH_scape0.wav\n",
       "\n",
+      "filename = scapes/rats_EATO_WOTH_scape2.wav\n",
       "\n",
       "filename = scapes/rats_EATO_WOTH_scape4.wav\n",
+      "\n",
       "\n",
       "\n",
       "\n",
@@ -355,12 +441,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-81c262051587>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfut\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mas_completed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfuts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfut\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"X\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"y\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-79-74b615f31559>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfut\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mas_completed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfuts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfut\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"X\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"y\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
    "source": [
+    "## NO PARALLELISM IS HAPPENING RIGHT NOW\n",
+    "\n",
     "# Fill DF \"df\" with all scape names and indices\n",
     "df = pd.read_csv(f\"{out_dir}/wavfiles.txt\", header=None)\n",
     "df.columns= [\"Filename\"]\n",
@@ -369,7 +457,7 @@
     "# Create empty DF \"results\" with indices matching \"df\"\n",
     "results = pd.DataFrame(index=df.index.values, columns=[\"X\", \"y\"], dtype=str)\n",
     "\n",
-    "# Parallelizee - send one filename at a time (chunk) to preproceser, which sends it to be processed)\n",
+    "# Parallelize - send one filename at a time (chunk) to preproceser, which sends it to be processed)\n",
     "nprocs = cpu_count()\n",
     "chunks = np.array_split(df[[\"Filename\", \"Index\"]], nprocs)\n",
     "executor = ProcessPoolExecutor(nprocs)\n",
